# 2dgame

./: README.md  game.py  pyproject.toml  sprites.py
