[tool.poetry]
name = "scavenge"
version = "0.1.0"
description = "a 2d platformer, mad max inspired"
authors = ["stanluuk31 <467804@student.saxion.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
